adds get graph ws event
